# okra_assistant

./: .gitignore  CHANGELOG.md  LICENSE  README.md  backup_okra_assistant.ps1  project.toml  run_daily_report.ps1  run_desktop_app.ps1  run_nightly_review.ps1
agents/: openai.yaml
app/: copilot_service.py  decision_support.py  desktop_app.py  desktop_backend.py  desktop_shell.py  desktop_shell_qt.py  okra_helper.cmd  okra_helper.vbs  page_registry.py  task_runtime.py  task_state.py  theme.py  ui_prefs.py  ui_schema_overrides.py  ui_schemas.py  ui_support.py  ui_tasks.py  web_api.py  web_api_format.py  widgets.py  workbench_history.py  workbench_state.py
assets/: report_template.md
config/: agents.toml  benchmark_mappings.json  llm.toml  market_overrides.json  portfolio.json  portfolio_definition.json  realtime_valuation.toml  review.toml  settings.toml  strategy.toml  watchlist.json
docs/: INDEX.md  agent_input_contracts.md  desktop_app_prd.md  desktop_ui_redesign_backlog.md  development_todo.md  fund_assistant_upgrade_plan_2026-03-19.md  fund_multiagent_design.md  handoff_2026-03-09_real_multiagent.md  handoff_2026-03-11_todo_completion.md  implementation_batch_2026-03-18.md  improvement_execution_roadmap.md  improvement_recommendations.md  modern_workbench.md  portfolio_upgrade_roadmap_2026-04-19.md  standalone_migration_plan.md  ui_acceptance_checklist.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
(+130 files in other folders)
