[package]
name = "okra-workbench"
version = "0.1.0"
description = "OKRA modern financial workbench"
authors = ["qmq"]
edition = "2021"

[lib]
name = "okra_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
